--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "build": "tsc --project ./",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node index.js"
   },
   "keywords": [],
   "author": "",
