--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,5 +67,8 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-    "exclude": "node_modules/*"
+  "exclude": [
+    "../wwwroot/app",
+    "node_modules/*"
+  ]
 }
